@@ -6,11 +6,25 @@ export const environment = {
   production: false
 };
 
-/*
- * For easier debugging in development mode, you can import the following file
- * to ignore zone related error stack frames such as `zone.run`, `zoneDelegate.invokeTask`.
- *
- * This import should be commented out in production mode because it will have a negative impact
- * on performance if an error is thrown.
- */
-// import 'zone.js/plugins/zone-error';  // Included with Angular CLI.
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyD9XCEXVYsfkD3e-DAdw0ZNRuFkLIoEv_M",
+  authDomain: "human-benchmark-app.firebaseapp.com",
+  databaseURL: "https://human-benchmark-app-default-rtdb.firebaseio.com",
+  projectId: "human-benchmark-app",
+  storageBucket: "human-benchmark-app.appspot.com",
+  messagingSenderId: "38547506701",
+  appId: "1:38547506701:web:4acf3cea5c0b0d59fd3744",
+  measurementId: "G-VDM8RTTGWR"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
